This commit updates referencing to images and tries to fix distorted layout only seen in gitpages deployment

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h6 {
 }
 
 .container {
-    background-image: url("/Images/hero-cover.png");
+    background-image: url("Images/hero-cover.png");
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -72,11 +72,13 @@ h6 {
         display: block;
         margin: 0;
         padding: 4em;
+        color: black;
     }
 
     h5 {
         font-size: 1.5em;
         float: left;
+        margin-top: 0em;
         margin: -1.5em;
         color: black;
 
@@ -116,11 +118,28 @@ h6 {
         line-height: 5em;
         font-weight: 500;
     }
-
+    ul {
+        margin-top: 0em;
+    }
+    
+    li {
+        display: inline;
+        padding: 0em;
+        font-size: 18px;
+    }
     a {
         font-size: 2em;
         padding: 1.7em;
         color: gray;
+        text-decoration: none;
+        font-size: 2em;
+        margin-top: 1em;
+        margin-left: 1em;
+    }
+    h6 {
+        font-size: 8px;
+        margin-top: 0em;
+        padding-left: 6em;
     }
 
     .login {
@@ -133,6 +152,8 @@ h6 {
 
     .container {
         background-image: none;
+        height: 0;
+        width: 0;
     }
 }
 
@@ -145,7 +166,11 @@ h6 {
     color: white;
     margin-top: 3em;
 }
-
+.hero {
+    height: 500%;
+    width: auto;
+    display: flex;
+}
 h1 {
     font-size: 4.5em;
 }
@@ -183,11 +208,17 @@ p {
     .heroo {
         margin-top: 30em;
         display: block;
-        background-image: url("/Images/hero-cover.png");
+        background-image: url("Images/hero-cover.png");
         background-size: cover;
         background-repeat: no-repeat;
         height: 100%;
         width: 600%;
+        text-align:justify;
+        transform: none;
+        color: white;
+        margin-left: -17em;
+        padding-left: 3em;
+        padding-right: 12em;
     }
 
     .hero {
@@ -221,14 +252,20 @@ p {
     }
 
     .right-btn {
-        margin-left: 72em;
+        margin-left: 2em;
         margin-top: 2em;
+        margin-right: 10em;
+        float: left;
+        padding: 1em;
     }
 
     .left-btn {
-        margin-right: 74em;
-        margin-top: 2em;
+        margin-right: 1em;
+        margin-top: 1.9em;
         padding-right: 1em;
+        float: left;
+        margin-left: -7em;
+        padding: 1em;
     }
 }
 
@@ -866,6 +903,7 @@ h2 {
     margin-left: 15em;
     padding-bottom: 0em;
     margin-top: -22em;
+    margin-bottom: auto;
 }
 
 .input {
@@ -906,7 +944,7 @@ h2 {
 @media screen and (max-width: 600px) {
 
     .contact {
-        width: 100%;
+        width: 30%;
     }
 
     .form {
@@ -1052,6 +1090,7 @@ h2 {
         margin-top: 2em;
         margin-bottom: 3em;
         margin-right: 10em;
+        line-height: 2em;
     }
 
     .fifth {
